--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -9,7 +9,7 @@ User=ubuntu
 # Set working directory to the Airbnb Clone directory
 WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
 # Start Gunicorn with 3 workers, binding to 0.0.0.0:5003, log errors to /tmp/airbnb-error.log
-ExecStart=/usr/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic:app --error-logfile /tmp/airbnb-error.log
+ExecStart=/usr/bin/gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app --error-logfile /tmp/airbnb-error.log
 # Restart the service if it fails
 Restart=always
 # Redirect standard output to /tmp/airbnb-access.log
